--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <p>Here are my works:</p>
         <ul>
             <li><a href="week1/">Self portrait</a></li>
+            <li><a href="week2/">Assignment 2</a></li>
         </ul>
         <img width="60%" src="images/dog.jpg" alt="doggo">
         <p>Hi, I'm a dog.</p>
