--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         <h2>Welcome to my MMP 210 page!</h2>
         <p>Here are my works:</p>
         <ul>
-            <li><a href="week1/">Self portrait</a></li>
-            <li><a href="week2/">Assignment 2</a></li>
+            <li><a href="week1/index.html">Assignment 1 Self portrait</a></li>
+            <li><a href="week2/index.html">Assignment 2 Illustration</a></li>
+            <li><a href="week3/index.html">Assignment 3 Name Logo</a></li>
         </ul>
         <img width="60%" src="images/dog.jpg" alt="doggo">
         <p>Hi, I'm a dog.</p>
