--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Welcome to my MMP 210 page!</h2>
+        <h2>Welcome to my MMP 210 page</h2>
         <p>Here are my works:</p>
         <ul>
             <li><a href="week1/index.html">Assignment 1 Self portrait</a></li>
@@ -15,7 +15,7 @@
             <li><a href="week3/index.html">Assignment 3 Name Logo</a></li>
         </ul>
         <img width="60%" src="images/dog.jpg" alt="doggo">
-        <p>Hi, I'm a dog.</p>
+        <p>Hi I'm a dog</p>
     </div>
 </body>
 </html>
