--- a/week1/index.html
+++ b/week1/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <div class="container">
-    <h2>Self portrait</h2>
+    <h2>↓ Assignment 1 ↓
+    <a href="../index.html"> Home</a></h2>
     
     <script src="../p5.min.js"></script>
     <script src="sketch.js" ></script>
