--- a/week2/index.html
+++ b/week2/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="container">
-    <h2>Assignment 2</h2>
-    <h3><a href="../index.html">Home</a></h3>
+    <h2>↓ Assignment 2 ↓
+    <a href="../index.html"> Home</a></h2>
     
     <script src="../p5.min.js"></script>
     <script src="sketch.js" ></script>
