--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="week1/index.html">Assignment 1 Self portrait</a></li>
             <li><a href="week2/index.html">Assignment 2 Illustration</a></li>
             <li><a href="week3/index.html">Assignment 3 Name Logo</a></li>
+            <li><a href="week4/index.html">Assignment 4 Snake Game</a></li>
         </ul>
         <img width="60%" src="images/dog.jpg" alt="doggo">
         <p>Hi I'm a dog</p>
